# cryptlib

./: .gitignore  LICENSE  README.md  app-key.jks  build.gradle  gradle.properties  local.properties  settings.gradle  versions.gradle
CryptLib/: .gitignore
CryptLib/CryptLibrary/src/androidTest/java/me/xbh/lib/: ExampleInstrumentedTest.java
CryptLib/CryptLibrary/src/main/cpp/include/: aes.h  md5.h
CryptLib/CryptLibrary/src/main/kotlin/me/xbh/lib/: CryptManager.kt  Md5.kt
CryptLib/app/: proguard-rules.pro
CryptLib/app/src/main/res/layout/: activity_main.xml
CryptLib/gradle/wrapper/: gradle-wrapper.properties
CryptLibrary/: CMakeLists.txt  build.gradle
CryptLibrary/src/main/: AndroidManifest.xml
CryptLibrary/src/main/cpp/: aes.cpp  aes_helper.cpp  base64.cpp  keytools.cpp  main.cpp  md5.cpp  random_tool.cpp  rsa.cpp  xlib.cpp
CryptLibrary/src/main/cpp/include/: aes.h  aes_helper.h  base64.h  keytools.h  main.h  md5.h  random_tool.h  rsa.h  xlib.h
CryptLibrary/src/main/cpp/include/openssl/: x509.h
CryptLibrary/src/main/kotlin/me/xbh/lib/: CryptManager.kt  ICrypt.kt  Md5.kt
CryptLibrary/src/main/kotlin/me/xbh/lib/bean/: Type.kt
CryptLibrary/src/main/kotlin/me/xbh/lib/core/: CryptService.kt  ICrypt.kt
CryptLibrary/src/main/kotlin/me/xbh/lib/core/cxx/: AesImpl.kt  CryptServiceImpl.kt  Md5.kt  RsaImpl.kt
CryptLibrary/src/main/kotlin/me/xbh/lib/core/java/: AesJavaImpl.kt  CryptServiceJavaImpl.kt  RsaJavaImpl.kt
CryptLibrary/src/main/kotlin/me/xbh/lib/core/java/utils/: AesUtil.kt  Md5Util.kt  RsaUtil.kt
CryptLibrary/src/main/kotlin/me/xbh/lib/impl/: AesImpl.kt  RsaImpl.kt
CryptLibrary/src/main/kotlin/me/xbh/lib/sdk/: CryptManager.kt  CryptProxy.kt
CryptLibrary/src/main/res/values/: strings.xml
CryptLibrary/src/test/java/me/xbh/lib/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/me/xbh/cryptlib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/me/xbh/cryptlib/ui/: MainActivity.kt  RandomUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/me/xbh/cryptlib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
